Update email in composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
   "authors": [
     {
       "name": "Jim Wright",
-      "email": "jmwri93@gmail.com"
+      "email": "jim@jwright.co"
     }
   ],
   "support": {
-    "email": "jmwri93@gmail.com",
+    "email": "jim@jwright.co",
     "issues": "https://github.com/jmwri/amazon-wishlist/issues",
     "source": "https://github.com/jmwri/amazon-wishlist",
     "docs": "https://github.com/jmwri/amazon-wishlist/blob/master/README.md"
