--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ php:
   - '7.0'
 install:
   - composer install
+addons:
+    code_climate:
+        repo_token: 5ed980f3238cd711218670f3561e20dda0bdea8820710d91231763b78dbb89da
