--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ install:
 addons:
     code_climate:
         repo_token: 5ed980f3238cd711218670f3561e20dda0bdea8820710d91231763b78dbb89da
+after_script:
+  - vendor/bin/test-reporter
